tests/fixtures/negative/executor_memory_slot_mismatch.wrela
// expect: SEM0047: executor Worker memory is owned by other but slot is worker
module negative.executor_memory_slot_mismatch

module machine.x86_64.cpu_state
data SlotIdentity { label: StringLiteral }
data ExecutorSlot { id: U64 }
class ExecutorRegistry { fn claim(self, identity: SlotIdentity) -> ExecutorSlot { return ExecutorSlot(id = 0) } }

module machine.x86_64.executor_memory
use { ExecutorSlot } from machine.x86_64.cpu_state
class ExecutorMemory {}
class OwnedMemory { fn claim_executor_arena(self, owner: ExecutorSlot) -> ExecutorMemory { return ExecutorMemory() } }

module negative.executor_memory_slot_mismatch.app
use { ExecutorRegistry, ExecutorSlot, SlotIdentity } from machine.x86_64.cpu_state
use { ExecutorMemory, OwnedMemory } from machine.x86_64.executor_memory

executor Worker {
    slot: ExecutorSlot
    memory: ExecutorMemory
    start fn run(self) -> never { while true {} }
}

image Bad {
    transitions { delegated_hardware -> owned_hardware }
    phase delegated_hardware(hardware: DelegatedHardware) -> OwnedHardware { return hardware.exit_to_owned_hardware() }
    phase owned_hardware(hardware: OwnedHardware) -> never {
        let registry = ExecutorRegistry()
        let worker_slot = registry.claim(identity = SlotIdentity(label = "worker"))
        let other_slot = registry.claim(identity = SlotIdentity(label = "other"))
        let memory = OwnedMemory().claim_executor_arena(owner = other_slot)
        let worker = Worker(slot = worker_slot, memory = memory)
        while true {}
    }
}
